# risc0-proof-verifier

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: generate_example.rs  generate_example_proof.rs  verify_example.rs  verify_example_proof.rs
risc0-proof-verifier/: Cargo.toml  README.md  test.sh
risc0-proof-verifier/guest/: Cargo.toml
risc0-proof-verifier/guest/src/: main.rs
risc0-proof-verifier/src/: lib.rs
risc0-proof-verifier/tests/: integration.rs
test_files/: example.proof
