[package]
name = "risc0-verifier-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-proof-verifier = { path = "./risc0-proof-verifier" }
anyhow = "1.0"
risc0-zkvm = "0.20.1"
bincode = "1.3.3"

[[bin]]
name = "verify_example"
path = "examples/verify_example.rs"

[[bin]]
name = "generate_example"
path = "examples/generate_example.rs" 