[package]
name = "risc0-proof-verifier"
version = "0.1.0"
edition = "2021"
authors = ["Amirhossein Azarpour <amirh.eth@gmail.com>"]
description = "A library for verifying Risc0 zkVM proofs."
license = "MIT OR Apache-2.0"

[dependencies]
risc0-zkvm = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3.3"

[dev-dependencies]
tempfile = "3.8.1"
